[package]
name = "xng-rs-log"
version = "0.1.0"
edition = "2021"
authors = [
  "Tim Schubert <dadada@dadada.li>",
  "Sven Friedrich <sven@autumnal.de>",
]
license = "MIT"
description = " Logger using XNG console "
documentation = "https://dlr-ft.github.io/xng-rs-log/"
readme = "README.md"
repository = "https://github.com/DLR-FT/xng-rs-log"

[dependencies]
log = "0"
